--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-
+<title>KAA Search</title>
+<link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css">
+  <link rel="shortcut icon" type="image/png" href="https://www2.kickassanime.rs/images/favicons/fav.png">
 
 <script async src="https://cse.google.com/cse.js?cx=584d92ca2406811b1"></script>
 <div class="gcse-search"></div> 
@@ -24,7 +27,7 @@
     <div class="nav-wrapper">
       <div class="left-side ">
         <div class="nav-link-wrapper active-nav-link">
-          <a href="kaalinks.xyz">Home page</a>
+          <a href="index.html">Home page</a>
       </div>
   </div>
 
